force-app/main/default/objects/InvoicebookEntry__c/InvoicebookEntry__c.object-meta.xml
<CustomObject>
    <label>Produto da Tabela de Juros</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Produtos da Tabela de Preço Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos da Tabela de Juros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>