force-app/main/default/objects/InvoicebookEntry__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Produtos da Tabela de Juros</relationshipLabel>
    <relationshipName>Produtos_da_Tabela_de_Juros</relationshipName>
    <type>Lookup</type>
</CustomField>