force-app/main/default/objects/InvoicebookEntry__c/fields/FamilyName__c.field-meta.xml
<CustomField>
    <fullName>FamilyName__c</fullName>
    <formula>Family__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da Familia</label>
    <type>Text</type>
</CustomField>