force-app/main/default/objects/InvoicebookEntry__c/fields/Juros__c.field-meta.xml
<CustomField>
    <fullName>Juros__c</fullName>
    <label>Juros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>