force-app/main/default/objects/InvoicebookEntry__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos da Tabela de Juros</relationshipLabel>
    <relationshipName>Produtos_da_Tabela_de_Juros</relationshipName>
    <type>Lookup</type>
</CustomField>