force-app/main/default/objects/InvoicebookEntry__c/fields/Product2Name__c.field-meta.xml
<CustomField>
    <fullName>Product2Name__c</fullName>
    <formula>Product2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Produto</label>
    <type>Text</type>
</CustomField>